--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
     <h4>{{ 'PAGE.HOME' | translate | uppercase }}</h4>
     <h1>{{ 'PAGE.ROLEPLAY' | translate | uppercase }}</h1>
     <p>{{ 'HOME.ROLEPLAY.RESUME' | translate }}</p>
-    <button>{{ 'HOME.ROLEPLAY.SEEMORE' | translate | uppercase }}</button>
+    <button routerLink="roleplay">{{ 'HOME.ROLEPLAY.SEEMORE' | translate | uppercase }}</button>
   </div>
 </div>
 <div [ngClass]="{'active': selection == 2 }" class="home-container container03">
