Refactor : Add background on roleplay page and links

--- a/src/app/pages/roleplay/roleplay.component.scss
+++ b/src/app/pages/roleplay/roleplay.component.scss
@@ -5,8 +5,14 @@
         position: relative;
 				height: 400px;
 
+				background-position: center;
+				background-size: cover;
+				background-image: linear-gradient(-45deg, rgba($dark-color, 1.0), rgba($dark-color, 0.75), rgba($dark-color, 0.5), rgba($primary-color, 0.5), rgba($primary-color, 0.5)),
+				url("/assets/images/home_02.png");
+
 				&.little {
-					height: 300px;
+					height: 305px;
+					background-image: linear-gradient(135deg, rgba($dark-color, 1.0), rgba($dark-color, 0.75), rgba($dark-color, 0.5), rgba($primary-color, 0.5), rgba($primary-color, 0.5));
 				}
 
         .title-container {
