--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -5,3 +5,9 @@
   border-top : 5px solid $secondary-color;
   border-bottom: 1px solid $light-secondary-color;
 }
+
+[little-separator] {
+	height: 5px;
+  border-top : 5px solid $secondary-color;
+  border-bottom: 1px solid $light-secondary-color;
+}
