--- a/src/app/pages/roleplay/roleplay.component.html
+++ b/src/app/pages/roleplay/roleplay.component.html
@@ -2,7 +2,7 @@
   <div class="title-container">
 		<h2>{{ 'ROLEPLAY.UNIVERSE.TITLE' | translate | uppercase }}</h2>
 		<p>{{ 'ROLEPLAY.UNIVERSE.RESUME' | translate }}</p>
-		<button routerLink="universe">{{ 'ROLEPLAY.UNIVERSE.SEEMORE' | translate | uppercase }}</button>
+		<button routerLink="../universe">{{ 'ROLEPLAY.UNIVERSE.SEEMORE' | translate | uppercase }}</button>
   </div>
   <div class="glyphe-container">
     <img src="assets/images/glyphes/map_01.png" class="glyphe glyphe01" alt=""/>
@@ -12,8 +12,8 @@
     <img src="assets/images/glyphes/map_05.png" class="glyphe glyphe05 map" alt=""/>
   </div>
 </div>
-<div separator></div>
 <div class="roleplay-container little">
+	<div little-separator></div>
   <div class="glyphe-container inversed-container little">
     <img src="assets/images/glyphes/perso_01.png" class="glyphe glyphe01" alt=""/>
     <img src="assets/images/glyphes/perso_02.png" class="glyphe glyphe02" alt=""/>
@@ -24,17 +24,17 @@
   <div class="title-container inversed-container">
 		<h2>{{ 'ROLEPLAY.PERSO.TITLE' | translate | uppercase }}</h2>
 		<p>{{ 'ROLEPLAY.PERSO.RESUME' | translate }}</p>
-		<button routerLink="roleplay">{{ 'ROLEPLAY.PERSO.SEEMORE' | translate | uppercase }}</button>
-  </div>
+		<button>{{ 'ROLEPLAY.PERSO.SEEMORE' | translate | uppercase }}</button>
+	</div>
 </div>
-<div separator></div>
 <div class="roleplay-container">
+	<div little-separator></div>
   <div class="title-container">
 		<h2>{{ 'ROLEPLAY.FILES.TITLE' | translate | uppercase }}</h2>
 		<p>{{ 'ROLEPLAY.FILES.RESUME01' | translate }}</p>
-		<button routerLink="characters">{{ 'ROLEPLAY.FILES.SEEMORE01' | translate | uppercase }}</button>
+		<button>{{ 'ROLEPLAY.FILES.SEEMORE01' | translate | uppercase }}</button>
 		<p>{{ 'ROLEPLAY.FILES.RESUME02' | translate }}</p>
-		<button routerLink="characters">{{ 'ROLEPLAY.FILES.SEEMORE02' | translate | uppercase }}</button>
+		<button>{{ 'ROLEPLAY.FILES.SEEMORE02' | translate | uppercase }}</button>
   </div>
   <div class="glyphe-container">
     <img src="assets/images/glyphes/book_01.png" class="glyphe glyphe01" alt=""/>
