Fix : Ajust logo on hover, the button on the home page, and readd the about image

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -46,11 +46,11 @@
 				cursor: pointer;
 				background-size: cover;
 				background-image: url("/assets/images/icon_logo.svg");
+			}
 
-				&:hover {
-					background-image: url("/assets/images/icon_logo_hover.svg");
-				}
-      }
+			&:hover .header-logo {
+				background-image: url("/assets/images/icon_logo_hover.svg");
+			}
 
       .header-title {
         color: $light-secondary-color;
