--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="about-container">
 	<div class="about-left">
-		<img src="/assets/images/about/diamond.png" alt="">
+		<img src="/assets/images/about.png" alt="">
 	</div>
 	<div class="about-right">
 		<h1>{{ 'PAGE.ABOUT' | translate }}</h1>
