Feat : Add the files for plaing roleplay

--- a/src/app/pages/roleplay/roleplay.component.html
+++ b/src/app/pages/roleplay/roleplay.component.html
@@ -24,7 +24,7 @@
   <div class="title-container inversed-container">
 		<h2>{{ 'ROLEPLAY.PERSO.TITLE' | translate | uppercase }}</h2>
 		<p>{{ 'ROLEPLAY.PERSO.RESUME' | translate }}</p>
-		<button>{{ 'ROLEPLAY.PERSO.SEEMORE' | translate | uppercase }}</button>
+		<button><a href="./assets/files/Fiche_PersoVide.ods" download>{{ 'ROLEPLAY.PERSO.SEEMORE' | translate | uppercase }}</a></button>
 	</div>
 </div>
 <div class="roleplay-container">
@@ -32,9 +32,9 @@
   <div class="title-container">
 		<h2>{{ 'ROLEPLAY.FILES.TITLE' | translate | uppercase }}</h2>
 		<p>{{ 'ROLEPLAY.FILES.RESUME01' | translate }}</p>
-		<button>{{ 'ROLEPLAY.FILES.SEEMORE01' | translate | uppercase }}</button>
+		<button><a href="./assets/files/Manuel_Joueur.pdf" download>{{ 'ROLEPLAY.FILES.SEEMORE01' | translate | uppercase }}</a></button>
 		<p>{{ 'ROLEPLAY.FILES.RESUME02' | translate }}</p>
-		<button>{{ 'ROLEPLAY.FILES.SEEMORE02' | translate | uppercase }}</button>
+		<button><a href="./assets/files/Manuel_MaitreDuJeu.pdf" download>{{ 'ROLEPLAY.FILES.SEEMORE02' | translate | uppercase }}</a></button>
   </div>
   <div class="glyphe-container">
     <img src="assets/images/glyphes/book_01.png" class="glyphe glyphe01" alt=""/>
