--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,7 +1,6 @@
 @import "../../../styles/variables.scss";
 
 :host {
-    display: block;
 		background-color: $dark-color;
 
 		.footer-infos {
@@ -157,7 +156,13 @@
         justify-content: space-between;
 
         height: 50px;
-        border-top: 1px solid $secondary-color;
+				border-top: 1px solid $secondary-color;
+
+				@media screen and (max-width: 700px) {
+					flex-direction: column;
+					justify-content: normal;
+					height: 100px;
+				}
 
 				a {
           display: inline-block;
@@ -184,7 +189,11 @@
 
         .footer-section {
           position: relative;
-          width: 250px;
+					width: 250px;
+
+					@media screen and (max-width: 700px) {
+						height: 50px;
+					}
 
           ul {
             display: flex;
@@ -213,5 +222,5 @@
             }
           }
         }
-    }
+		}
 }
