--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
 html, body {
 	height: 100%;
-	max-width: 100%;
+	width: 100%;
 	margin: 0;
 	font-size: 14px;
 	font-family: 'Noto Serif', serif;
@@ -20,6 +20,11 @@ h1 {
 	text-transform: uppercase;
   color: $light-secondary-color;
 	margin: 0;
+
+	@media screen and (max-width: 700px) {
+		font-size: 40px;
+		line-height: 40px;
+	}
 }
 
 h2 {
