--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,3 +19,25 @@
     <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/population" [innerHtml]="'PAGE.POPULATION' | translate | uppercase"></a>
   </nav>
 </div>
+
+<div class="header-mobile-section">
+  <div class="header-main">
+		<a class="header-logo" routerLink=""></a>
+		<a class="header-list" (click)="toggleList()"></a>
+  </div>
+</div>
+<div *ngIf="listDisplayed" class="header-mobile-subsection">
+	<nav>
+		<a routerLinkActive="active" routerLink="universe" [innerHtml]="'PAGE.UNIVERSE' | translate | uppercase"></a>
+		<a routerLinkActive="active" routerLink="roleplay" [innerHtml]="'PAGE.ROLEPLAY' | translate | uppercase"></a>
+		<a class="disabled" [innerHtml]="'PAGE.CHARACTERS' | translate | uppercase"></a>
+	</nav>
+  <nav *ngIf="route == 'universe'">
+		<a class="disabled" [innerHtml]="'PAGE.EVANELL' | translate | uppercase"></a>
+		<a class="disabled" [innerHtml]="'PAGE.CELESTIA' | translate | uppercase"></a>
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe" class="header-subtitle" [innerHtml]="'PAGE.WORLD' | translate | uppercase"></a>
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/religion" [innerHtml]="'PAGE.RELIGION' | translate | uppercase"></a>
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/crystals" [innerHtml]="'PAGE.CRYSTALS' | translate | uppercase"></a>
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/population" [innerHtml]="'PAGE.POPULATION' | translate | uppercase"></a>
+  </nav>
+</div>
