--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -3,17 +3,27 @@
 :host {
 		background-color: $dark-color;
 
-		.footer-infos {
+		.bigfooter-infos {
 			display: flex;
 			height: 250px;
 			border-top: 1px solid $secondary-color;
 
-			.footer-left {
+			@media screen and (max-width: 700px) {
+				height: auto;
+    		flex-direction: column;
+			}
+
+			.bigfooter-left {
 				display: flex;
 				width: 50%;
 				margin: auto 0;
 
-				.footer-container {
+				@media screen and (max-width: 700px) {
+					height: 200px;
+    			width: 100%;
+				}
+
+				.bigfooter-container {
 					width: 50%;
 					padding: 0 5%;
 					margin: auto;
@@ -43,11 +53,19 @@
 				}
 			}
 
-			.footer-right {
+			.bigfooter-right {
 				position: relative;
 				width: 50%;
 				margin: 25px 0;
 				border-left: 1px solid $secondary-color;
+
+				@media screen and (max-width: 700px) {
+					height: 100px;
+					width: 100%;
+					margin: auto;
+					border-top: 1px solid $secondary-color;
+					border-left: none;
+				}
 
 				ul {
 					display: flex;
@@ -78,10 +96,23 @@
 								color: $light-secondary-color;
 							}
 
+							@media screen and (max-width: 700px) {
+								height: 40px;
+								width: 40px;
+								margin: 0 40px;
+
+								line-height: 40px;
+								font-size: 40px;
+							}
+
 							span {
 								position: absolute;
 								transition: transform 0.5s;
 								background-color: $secondary-color;
+
+								@media screen and (max-width: 700px) {
+									display: none;
+								}
 							}
 
 							span:nth-child(1), span:nth-child(3) {
@@ -150,6 +181,44 @@
 			}
 		}
 
+		.bigfooter-navigation {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+
+			height: 50px;
+			border-top: 1px solid $secondary-color;
+
+			@media screen and (max-width: 700px) {
+				flex-direction: column;
+				justify-content: normal;
+				height: 50px;
+			}
+
+			nav {
+				display: flex;
+				justify-content: space-between;
+				width: 100%;
+			}
+
+			a {
+				display: inline-block;
+				position: relative;
+				height: 50px;
+				line-height: 50px;
+				padding: 0 20px;
+				color: $light-color;
+
+				&:hover {
+					color: $light-secondary-color;
+				}
+
+				&.active {
+					color: $light-secondary-color;
+				}
+			}
+		}
+
     .footer-navigation {
         display: flex;
         align-items: center;
@@ -180,12 +249,6 @@
             color: $light-secondary-color;
           }
         }
-
-				.bigfooter-section {
-					display: flex;
-					justify-content: space-between;
-					width: 100%;
-				}
 
         .footer-section {
           position: relative;
