--- a/src/app/components/head-universe/head-universe.component.html
+++ b/src/app/components/head-universe/head-universe.component.html
@@ -6,3 +6,13 @@
 	</div>
 	<img src="{{ imgRight }}" alt="">
 </div>
+<div class="head-mobile-container">
+	<div class="head-title">
+		<img src="{{ imgLeft }}" alt="">
+		<h1>{{ title }}</h1>
+		<img src="{{ imgRight }}" alt="">
+	</div>
+	<div class="head-text">
+		<p>{{ section01 }}<br><br>{{ section02 }}<br><br>{{ section03 }}</p>
+	</div>
+</div>
