--- a/src/app/components/head-universe/head-universe.component.scss
+++ b/src/app/components/head-universe/head-universe.component.scss
@@ -8,6 +8,10 @@
 		align-items: center;
 		height: 450px;
 
+		@media screen and (max-width: 1000px) {
+			display: none;
+		}
+
 		&::after {
 			content: "";
 			position: absolute;
@@ -30,6 +34,50 @@
 		.head-text {
 			width: 50%;
 			text-align:center;
+		}
+	}
+
+	.head-mobile-container {
+		position: relative;
+		display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+		height: 650px;
+
+		@media screen and (min-width: 1000px) {
+			display: none;
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			opacity: 1.0;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			z-index: -1;
+
+			background-position: center;
+			background-size: cover;
+			background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8)), url("/assets/images/home_01.png");
+		}
+
+		img {
+			height: 200px;
+		}
+
+		.head-title {
+			display: flex;
+			align-items: center;
+			justify-content: space-around;
+			text-align: center;
+		}
+
+		.head-text {
+			width: 80%;
+			margin: 0 auto;
+			text-align: center;
 		}
 	}
 }
