--- a/src/app/pages/roleplay/roleplay.component.scss
+++ b/src/app/pages/roleplay/roleplay.component.scss
@@ -4,15 +4,23 @@
     .roleplay-container {
         position: relative;
 				height: 400px;
-
 				background-position: center;
 				background-size: cover;
 				background-image: linear-gradient(-45deg, rgba($dark-color, 1.0), rgba($dark-color, 0.75), rgba($dark-color, 0.5), rgba($primary-color, 0.5), rgba($primary-color, 0.5)),
 				url("/assets/images/home_02.png");
 
+				@media screen and (max-width: 1000px) {
+					height: 500px;
+				}
+
 				&.little {
-					height: 305px;
-					background-image: linear-gradient(135deg, rgba($dark-color, 1.0), rgba($dark-color, 0.75), rgba($dark-color, 0.5), rgba($primary-color, 0.5), rgba($primary-color, 0.5));
+					height: 310px;
+					background-image: linear-gradient(135deg, rgba($dark-color, 1.0), rgba($dark-color, 0.75), rgba($dark-color, 0.5), rgba($primary-color, 0.5), rgba($primary-color, 0.5)),
+					url("/assets/images/home_00.png");
+
+					@media screen and (max-width: 1000px) {
+						height: 350px;
+					}
 				}
 
         .title-container {
@@ -21,13 +29,22 @@
             left: 25%;
             width: 25%;
             text-align: left;
-            transform: translateX(-50%) translateY(-50%);
+						transform: translateX(-50%) translateY(-50%);
+
+						@media screen and (max-width: 1000px) {
+							left: 30%;
+							width: 50%;
+						}
 
             &.inversed-container {
                 left: auto;
                 right: 25%;
                 text-align: right;
-                transform: translateX(50%) translateY(-50%);
+								transform: translateX(50%) translateY(-50%);
+
+								@media screen and (max-width: 1000px) {
+									right: 30%;
+								}
             }
 				}
 
@@ -41,16 +58,33 @@
 					width: 300px;
 					perspective: 600px;
 
+					@media screen and (max-width: 1000px) {
+						right: 20%;
+						height: 150px;
+						width: 150px;
+						perspective: 300px;
+					}
+
 					&.little {
             height: 250px;
 						width: 250px;
 						perspective: 500px;
+
+						@media screen and (max-width: 1000px) {
+							height: 125px;
+							width: 125px;
+							perspective: 250px;
+						}
 					}
 
 					&.inversed-container {
 							right: 0%;
 							left: 25%;
 							transform: translateX(-50%) translateY(-50%);
+
+							@media screen and (max-width: 1000px) {
+								left: 20%;
+							}
 					}
 			}
     }
