--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -6,7 +6,13 @@
 		height: 800px;
     background-position: center;
 		background-size: cover;
-		background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8), rgba($dark-primary-color, 0.8), rgba($dark-primary-color, 1.0)), url("/assets/images/home_01.png");
+		background-image: linear-gradient(135deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8), rgba($dark-primary-color, 0.8), rgba($dark-primary-color, 1.0)), url("/assets/images/home_01.png");
+
+		@media screen and (max-width: 1200px) {
+			height: auto;
+			flex-direction: column-reverse;
+    	align-items: center;
+		}
 
 		::-webkit-scrollbar {
 			width: 6px;
@@ -25,6 +31,16 @@
 			padding: 20px;
 			margin: auto 0% auto 5%;
 			text-align: left;
+
+			@media screen and (min-width: 1200px) and (max-width: 1500px) {
+				width: 50%;
+			}
+
+			@media screen and (max-width: 1200px) {
+				height: auto;
+				width: 90%;
+				margin: 0;
+			}
 
 			.fact-image {
 				height: 200px;
@@ -57,7 +73,12 @@
     		padding: 5px 0;
 				border-top: 1px solid $secondary-color;
 
+				@media screen and (max-width: 1200px) {
+					height: auto;
+				}
+
 				p {
+					margin: 0;
 					font-size: 14px;
 					color: $secondary-color;
 					text-align: center;
@@ -69,19 +90,42 @@
 		.world-right {
 			display: flex;
   		flex-direction: column;
-			justify-content: space-between;
+			justify-content: space-evenly;
 			align-items: center;
 			height: 700px;
 			width: 65%;
 			margin: auto 2.5%;
 
+			@media screen and (min-width: 1200px) and (max-width: 1500px) {
+				width: 50%;
+			}
+
+			@media screen and (max-width: 1200px) {
+				height: auto;
+				width: 90%;
+				margin: 0;
+			}
+
 			.map-title {
 				height: 60px;
 				text-align: center;
+
+				@media screen and (max-width: 1200px) {
+					margin: 20px 0;
+				}
 			}
 
 			.map-background {
 				height: 620px;
+
+				@media screen and (min-width: 1200px) and (max-width: 1500px) {
+					height: 500px;
+				}
+
+				@media screen and (max-width: 1200px) {
+					height: auto;
+					width: 100%;
+				}
 			}
 
 			.map-icons{
@@ -95,6 +139,13 @@
 				margin-top: -25px;
 				margin-left: -25px;
 				cursor: pointer;
+
+				@media screen and (max-width: 700px) {
+					height: 40px;
+					width: 40px;
+					margin-top: -20px;
+					margin-left: -20px;
+				}
 			}
 
 			.map-icon-00 {
