--- a/src/app/pages/universe/religion/religion.component.scss
+++ b/src/app/pages/universe/religion/religion.component.scss
@@ -9,6 +9,10 @@
 		align-items: center;
 		height: 550px;
 
+		@media screen and (max-width: 700px) {
+			height: 450px;
+		}
+
 		&::after {
 			content: "";
 			position: absolute;
@@ -34,6 +38,10 @@
 				width: 8%;
 				height: 100%;
 				cursor: pointer;
+
+				@media screen and (max-width: 700px) {
+					width: 9%;
+				}
 			}
 		}
 
@@ -41,12 +49,21 @@
 			text-align: left;
 			max-width: 50%;
 
+			@media screen and (max-width: 700px) {
+				max-width: 80%;
+			}
+
 			p {
+				margin: 0;
 				font-size: 14px;
 				color: $secondary-color;
-				margin: 0;
 				padding: 4px 30px 4px 0;
 				font-style: italic;
+
+				@media screen and (max-width: 700px) {
+					padding: 0;
+					margin: auto;
+				}
 			}
 		}
 	}
