--- a/src/app/pages/universe/crystals/crystals.component.scss
+++ b/src/app/pages/universe/crystals/crystals.component.scss
@@ -9,6 +9,12 @@
 		align-items: center;
 		height: 550px;
 
+		@media screen and (max-width: 1000px) {
+			flex-direction: column;
+			justify-content: normal;
+			height: auto;
+		}
+
 		&::after {
 			content: "";
 			position: absolute;
@@ -30,9 +36,19 @@
 			height: 450px;
 			width: 450px;
 
+			@media screen and (max-width: 1000px) {
+				margin-top: 20px;
+				height: 350px;
+				width: 350px;
+			}
+
 			img {
 				position: absolute;
 				height: 450px;
+
+				@media screen and (max-width: 1000px) {
+					height: 350px;
+				}
 			}
 
 			.crystal-main {
@@ -77,12 +93,21 @@
 			text-align: left;
 			width: 50%;
 
+			@media screen and (max-width: 1000px) {
+				margin-bottom: 20px;
+				width: 80%;
+			}
+
 			p {
 				font-size: 14px;
 				color: $secondary-color;
 				margin: 0;
 				padding: 4px 30px 4px 0;
 				font-style: italic;
+
+				@media screen and (max-width: 1000px) {
+					padding: 0;
+				}
 			}
 		}
 	}
