Fix(about): Fix the height of the text

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -9,7 +9,7 @@
 
 		@media screen and (max-width: 1000px) {
 			flex-direction: column;
-			height: 1000px;
+			height: auto;
 			width: 100%;
 			align-items: center;
 		}
