--- a/src/app/pages/legacy/legacy.component.html
+++ b/src/app/pages/legacy/legacy.component.html
@@ -8,5 +8,6 @@
 			{{ 'LEGACY.CONTACT' | translate }}
 			<strong><a href="http://www.ovh.com/fr/support/" target="_blank">http://www.ovh.com/fr/support/</a></strong>
 		</p>
+		<p innerHtml="{{ 'LEGACY.IMAGES' | translate }}"></p>
 	</div>
 </div>
