Fix(population): Fix the height of the container for mobile

--- a/src/app/pages/universe/population/population.component.scss
+++ b/src/app/pages/universe/population/population.component.scss
@@ -9,6 +9,10 @@
 		align-items: center;
 		height: 550px;
 
+		@media screen and (max-width: 800px) {
+			height: auto;
+		}
+
 		&::after {
 			content: "";
 			position: absolute;
