--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -1,37 +1,42 @@
 <div class="creation-container">
-	<span (click)="downloadPDF()">CREATION</span>
+	<div>
+		<h1>Fiche de personnage</h1>
+	</div>
 	<div>
 		<span>Caractéristiques</span>
 		<span>Points restants : {{ leftPointsCaracteristics }}</span>
 	</div>
+	<creation-slider min="1" max="5" name="Vigueur" type="vigueur" value="{{ caracteristics.vigueur }}" (pointsValueChange)="changeCaracteristics($event)"></creation-slider>
+	<creation-slider min="1" max="5" name="Habileté" type="habilete" value="{{ caracteristics.habilete }}" (pointsValueChange)="changeCaracteristics($event)"></creation-slider>
+	<creation-slider min="1" max="5" name="Intellect" type="intellect" value="{{ caracteristics.intellect }}" (pointsValueChange)="changeCaracteristics($event)"></creation-slider>
+	<creation-slider min="1" max="5" name="Présence" type="presence" value="{{ caracteristics.presence }}" (pointsValueChange)="changeCaracteristics($event)"></creation-slider>
+	<creation-slider min="1" max="5" name="Pouvoir" type="pouvoir" value="{{ caracteristics.pouvoir }}" (pointsValueChange)="changeCaracteristics($event)"></creation-slider>
+</div>
+<div class="creation-container">
 	<div>
-		<span>Vigueur : {{ caracteristics.vigueur }}</span>
-		<span>Faible (1)</span>
-		<input type="range" min="1" max="5" value="{{ caracteristics.vigueur }}" (change)="test('vigueur', $event.target.value)"/>
-		<span>Fort (5)</span>
+		<span>Compétences</span>
+		<span>Points restants : {{ leftPointsSkills }}</span>
 	</div>
-	<div>
-		<span>Habileté : {{ caracteristics.habilete }}</span>
-		<span>Faible (1)</span>
-		<input type="range" min="1" max="5" value="{{ caracteristics.habilete }}" (change)="test('habilete', $event.target.value)"/>
-		<span>Fort (5)</span>
-	</div>
-	<div>
-		<span>Intellect : {{ caracteristics.intellect }}</span>
-		<span>Faible (1)</span>
-		<input type="range" min="1" max="5" value="{{ caracteristics.intellect }}" (change)="test('intellect', $event.target.value)"/>
-		<span>Fort (5)</span>
-	</div>
-	<div>
-		<span>Présence : {{ caracteristics.presence }}</span>
-		<span>Faible (1)</span>
-		<input type="range" min="1" max="5" value="{{ caracteristics.presence }}" (change)="test('presence', $event.target.value)"/>
-		<span>Fort (5)</span>
-	</div>
-	<div>
-		<span>Pouvoir : {{ caracteristics.pouvoir }}</span>
-		<span>Faible (1)</span>
-		<input type="range" min="1" max="5" value="{{ caracteristics.pouvoir }}" (change)="test('pouvoir', $event.target.value)"/>
-		<span>Fort (5)</span>
-	</div>
+	<creation-slider min="0" max="10" name="Animaux" type="animaux" value="{{ mainSkills.animaux }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Art" type="art" value="{{ mainSkills.art }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Artisanat" type="artisanat" value="{{ mainSkills.artisanat }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Athlétisme" type="athletisme" value="{{ mainSkills.athletisme }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Combat" type="combat" value="{{ mainSkills.combat }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Etiquette" type="etiquette" value="{{ mainSkills.etiquette }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Furtivité" type="furtivite" value="{{ mainSkills.furtivite }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Information" type="information" value="{{ mainSkills.information }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Intuition" type="intuition" value="{{ mainSkills.intuition }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Investigation" type="investigation" value="{{ mainSkills.investigation }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Larcin" type="larcin" value="{{ mainSkills.larcin }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Manipulation" type="manipulation" value="{{ mainSkills.manipulation }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Médecine" type="medecine" value="{{ mainSkills.medecine }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Persuasion" type="persuasion" value="{{ mainSkills.persuasion }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Pilotage" type="pilotage" value="{{ mainSkills.pilotage }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Savoir" type="savoir" value="{{ mainSkills.savoir }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Survie" type="survie" value="{{ mainSkills.survie }}" (pointsValueChange)="changeMainSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Cristaux de type Elémentaires" type="elementaires" value="{{ crystalSkills.elementaires }}" (pointsValueChange)="changeCrystalSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Cristaux de type Invocations" type="invocations" value="{{ crystalSkills.invocations }}" (pointsValueChange)="changeCrystalSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Cristaux de type Mentaux" type="mentaux" value="{{ crystalSkills.mentaux }}" (pointsValueChange)="changeCrystalSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Cristaux de type Spatiaux-Temporels" type="spatiauxtemporels" value="{{ crystalSkills.spatiauxtemporels }}" (pointsValueChange)="changeCrystalSkills($event)"></creation-slider>
+	<creation-slider min="0" max="10" name="Cristaux de type Spéciaux" type="speciaux" value="{{ crystalSkills.speciaux }}" (pointsValueChange)="changeCrystalSkills($event)"></creation-slider>
 </div>
