Fix(headeruniverse): Little br fixes and add remerciements

--- a/src/app/components/head-universe/head-universe.component.html
+++ b/src/app/components/head-universe/head-universe.component.html
@@ -2,7 +2,7 @@
 	<img src="{{ imgLeft }}" alt="">
 	<div class="head-text">
 		<h1>{{ title }}</h1>
-		<p>{{ section01 }}<br><br>{{ section02 }}<br><br>{{ section03 }}</p>
+		<p innerHtml="{{ section01 }}<br><br>{{ section02 }}<br><br>{{ section03 }}"></p>
 	</div>
 	<img src="{{ imgRight }}" alt="">
 </div>
@@ -13,6 +13,6 @@
 		<img src="{{ imgRight }}" alt="">
 	</div>
 	<div class="head-text">
-		<p>{{ section01 }}<br><br>{{ section02 }}<br><br>{{ section03 }}</p>
+		<p innerHtml="{{ section01 }}<br><br>{{ section02 }}<br><br>{{ section03 }}"></p>
 	</div>
 </div>
