--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -14,5 +14,7 @@
 		<p>{{ 'ABOUT.PROJECTSTEXT.PROJECT01TEXT' | translate }}</p>
 		<h4>{{ 'ABOUT.PROJECTSTEXT.PROJECT02' | translate | uppercase }}</h4>
 		<p>{{ 'ABOUT.PROJECTSTEXT.PROJECT02TEXT' | translate }}</p>
+		<h2>{{ 'ABOUT.THANKS' | translate | uppercase }}</h2>
+		<p innerHtml="{{ 'ABOUT.THANKSTEXT' | translate }}"></p>
 	</div>
 </div>
