Feat(creation): Prepare text help via fr json

--- a/src/app/components/creation-slider/creation-slider.component.html
+++ b/src/app/components/creation-slider/creation-slider.component.html
@@ -1,6 +1,9 @@
 <div>
-	<span>{{ name }} : {{ value }}</span>
+	<span>{{ name }} : {{ value }}</span><div (click)="toogleHelp()">AIDE</div>
 	<span>{{ min }}</span>
 	<input type="range" min="{{ min }}" max="{{ max }}" value="{{ value }}" (change)="valueChanged($event.target.value)"/>
 	<span>{{ max }}</span>
+	<div *ngIf="displayHelp">
+		<p innerHtml="{{ help }}"></p>
+	</div>
 </div>
